# model_optimization

./: .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  dataset_utils.py  main.py  memory.py  model.py  model_utils.py  pyproject.toml  run_benchmark.sh
src/: benchmark.py  dataset_utils.py  memory.py  model.py  model_utils.py
