[tool.poetry]
name = "model_optimization"
version = "0.1.0"
description = ""
authors = ["Adam Wawrzyński <adam.wawrzynski@reasonfieldlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
torch = "^1.13.1"
torchinfo = "^1.7.2"
torchvision = "^0.14.1"
opencv-python = "^4.7.0.68"
cuda-python = "^12.0.0"
torchmetrics = "^0.11.1"
scipy = "^1.10.0"
torch-tensorrt = { version="1.3.0" }
transformers = "^4.26.1"
datasets = "^2.10.0"
more-itertools = "^9.0.0"

[[tool.poetry.source]]
name = "torch-tensorrt"
url = "https://github.com/pytorch/TensorRT/releases/expanded_assets/v1.3.0"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
